# vera-edit-or-abstain

./: .gitignore  AUDITOR_QUICKSTART.md  GITHUB_EXPORT_README.md  INDEPENDENT_REPLICATION_PACKET.md  README.md  RELEASE_FILELIST.json  pyproject.toml
output/pdf/: README.md  SHA256SUMS
research/: external_review_registry.template.json  prereg.json  prereg.sha256  prereg_real.json  prereg_real.sha256  prereg_vera_p0_confirmation_v2.json  prereg_vera_p0_confirmation_v2.sha256  prereg_vera_p0_confirmation_v3.json  prereg_vera_p0_confirmation_v3.sha256  prereg_vera_p0_confirmation_v4.json  prereg_vera_p0_confirmation_v4.sha256  reference_manifest.json  submission_registry.template.json  theory_code_mapping.json
research/artifacts/: aaai2027_source_readiness.json  aaai2027_source_readiness.md  benchmark_claim_audit.csv  benchmark_claim_audit.json  camelyon17_faro_projection_certificate.json  camelyon17_faro_projection_certificate.md  camelyon17_faro_projection_frontier.csv  camelyon17_full_store_preflight_sample_report.json  camelyon17_mance_scaling_feasibility.json  camelyon17_mance_scaling_feasibility.md  camelyon17_mancepp_reference_40k_diagnostic_receipt.json  camelyon17_mancepp_reference_40k_diagnostic_receipt.md  camelyon17_mancepp_reference_80k_diagnostic_receipt.json  camelyon17_mancepp_reference_80k_diagnostic_receipt.md  camelyon17_mancepp_reference_diagnostic_receipt.json  camelyon17_mancepp_reference_diagnostic_receipt.md  camelyon17_mancepp_reference_full_nocap_receipt.json  camelyon17_mancepp_reference_full_nocap_receipt.md  camelyon17_resnet18_torch_full_numpy_store_report.json  camelyon17_resnet18_torch_full_store_dryrun_report.json  camelyon17_resnet18_torch_full_store_report.json  camelyon17_resnet18_torch_tar_smoke_numpy_store_report.json  camelyon17_resnet18_torch_tar_smoke_store_report.json  camelyon17_wilds_official_multiseed_results.csv  camelyon17_wilds_official_result_receipt.json  camelyon17_wilds_official_statistical_report.json  civilcomments_current_verification_report.json  civilcomments_current_verification_report.md  claim_ledger_audit.csv  claim_ledger_audit.json  claim_ledger_audit.md  conference_submission_status.json  conference_submission_status.md  confirmatory_balanced_receipt_audit.json  external_review_audit.json  faro_adversarial_internal_review.json  faro_adversarial_internal_review.md  faro_baseline_fairness_report.json  faro_baseline_fairness_report.md  faro_goal_completion_audit.json  (+150 more)
research/configs/: faro_claim_ledger.json  faro_paper_a_reproducibility.json  vera_claim_ledger.json  vera_reproducibility.json
research/maintrack/: README.md  (+39 more)
sources/: reference_metadata_raw.json  research_vera_novelty_audit_2026-07-13.md
(+1673 files in other folders)
