[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-certified-release"
version = "0.1.0"
description = "Certified stochastic release or abstention under structured deployment shift"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Rudra Chopra"}]
dependencies = [
  "joblib>=1.4",
  "numpy>=2.0",
  "scipy>=1.14",
  "scikit-learn>=1.5",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "research/mosaic"}
py-modules = [
  "mosaic_bridge",
  "mosaic_channel",
  "mosaic_envelope",
  "mosaic_exact",
  "mosaic_invariant",
  "mosaic_optimizer",
  "mosaic_real",
  "mosaic_release",
  "mosaic_transform_exact",
  "mosaic_transform_exact_optimizer",
]

[tool.setuptools.packages.find]
where = ["research/mosaic"]
include = ["mosaic_certified_release*"]

[tool.pytest.ini_options]
testpaths = ["research/tests"]
