[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-certified-release"
version = "0.2.0"
description = "Certified stochastic release or abstention under structured deployment shift"
readme = "AUDITOR_QUICKSTART.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Rudra Chopra"}]
dependencies = [
  "joblib>=1.4",
  "numpy>=2.0",
  "scipy>=1.14",
  "scikit-learn>=1.5",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
mosaic-audit = "mosaic_certified_release.cli:main"

[tool.setuptools]
package-dir = {"" = "research/mosaic"}
py-modules = [
  "mosaic_bridge",
  "mosaic_anytime",
  "mosaic_channel",
  "mosaic_continuous",
  "mosaic_decoder_lifted_optimizer",
  "mosaic_envelope",
  "mosaic_exact",
  "mosaic_invariant",
  "mosaic_lower_bound",
  "mosaic_optimizer",
  "mosaic_proxy_bridge",
  "mosaic_real",
  "mosaic_release",
  "mosaic_transcript",
  "mosaic_tradeoff",
  "mosaic_transform_exact",
  "mosaic_transform_exact_optimizer",
]

[tool.setuptools.packages.find]
where = ["research/mosaic"]
include = ["mosaic_certified_release*"]

[tool.pytest.ini_options]
testpaths = ["research/tests"]
